<resources>
    <string name="app_name">Work</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="mrp"> <strike>this is mrp</strike></string>


    <string name="baseURL">"http://ec2-13-58-16-206.us-east-2.compute.amazonaws.com"</string>
    <string name="retailerDataImageBaseURL">"http://ec2-13-58-16-206.us-east-2.compute.amazonaws.com/rt"</string>
    <string name="baseURLWithPort">"http://ec2-13-58-16-206.us-east-2.compute.amazonaws.com:6868"</string>
    <string name="categoryImageBaseUrl">"http://ec2-13-58-16-206.us-east-2.compute.amazonaws.com/magento/pub/media/catalog/category/"</string>
    <string name="productImageBaseUrl">"http://ec2-13-58-16-206.us-east-2.compute.amazonaws.com/magento/pub/media/catalog/product"</string>


    <string-array name="shop_category">
        <item>category 1</item>
        <item>category 2</item>
        <item>category 3</item>
        <item>category 4</item>
        <item>category 5</item>
        <item>category 6</item>
        <item>category 7</item>
        <item>category 8</item>
        <item>category 9</item>
        <item>category 10</item>
    </string-array>

    <string name="new_item_spinner">Select Category</string>
    <string-array name="new_item_spinner_category">
        <item>cat 1</item>
        <item>cat 2</item>
        <item>cat 3</item>
        <item>cat 4</item>
        <item>cat 5</item>
        <item>cat 6</item>
        <item>cat 7</item>
        <item>cat 8</item>
        <item>cat 9</item>
        <item>cat 10</item>
        <item>cat 11</item>
        <item>cat 12</item>
        <item>cat 13</item>
        <item>cat 14</item>
        <item>cat 15</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Strings for activity_delivery_settings -->
    <string name="provide_delivery">Do You Provide Home Delivery ?</string>
    <string name="max_free_delivery_distance">Max free deliver distance</string>
    <string name="min_amt_free_delivery">Min amount for free delivery</string>
    <string name="max_paid_delivery_dis">Max paid delivery distance</string>
    <string name="charge_per_half_km">Charge per half KiloMeter for delivery</string>
    <string name="save">Save</string>
    <!--                                           -->

    <!-- Strings for activity_shop_timing -->
    <string name="opens_at">Opens at</string>
    <string name="closes_at">Closes at</string>
    <string name="open_time">Open Time</string>
    <string name="close_time">Close Time</string>
    <string name="time_management">Shop Opening/Closing</string>
    <string name="add_business_hours">Add Business Hours</string>
    <string name="closed_from_1_to_2">Closed between</string>
    <string name="add_more">Add more</string>

    <!-- Strings for profile activity-->
    <string name="shop_name">Shop name</string>
    <string name="proprietor">Proprietor</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="address_line">Address line</string>
    <string name="sublocality_area">SubLocality Area</string>
    <string name="locality">Locality</string>
    <string name="change_location">Change Location</string>
    <string name="license_number">License Number</string>
    <string name="shop_details">Shop Location</string>
    <string name="save_profile">Save Profile</string>
    <string name="tap_to_mylocation">Tap to my location button to set shop location</string>
    <string name="verify_note">Note: \n
        1. Please make sure you have filled all the mandatory data in profile correctly \n
        2. Once you get the mail for successful verification of your data please logout and sign in again \n
    3. After verification you will not be able to change the shop name, location, shop act license and license number</string>

</resources>
