<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGray"
    tools:context=".ShopTimingActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/management"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="20dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <TextView
                    android:id="@+id/shop_timing_activity_title_1_textview_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp"
                    android:layout_marginStart="26dp"
                    android:layout_marginTop="06dp"
                    android:text="@string/time_management"
                    android:textColor="@color/colorBlack"
                    android:textSize="21sp"
                    android:textStyle="normal" />

                <Switch
                    android:id="@+id/shop_timing_activity_title_switch_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginEnd="47dp"
                    android:onClick="onClick"
                    android:paddingTop="15dp" />

            </RelativeLayout>
        </FrameLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/business_hours"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/management"
        android:layout_margin="10dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/shop_timing_activity_title_2_textview_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:text="@string/add_business_hours"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/shop_timing_activity_open_1_textview_id"
                    style="@style/ShopTimingActivity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/shop_timing_activity_title_2_textview_id"
                    android:text="@string/opens_at" />

                <Button
                    android:id="@+id/shop_timing_activity_open_1_btn_id"
                    android:layout_width="110dp"
                    android:layout_height="35dp"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@+id/shop_timing_activity_title_2_textview_id"
                    android:layout_marginEnd="45dp"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/open_time"
                    android:text="@string/open_time" />

                <TextView
                    android:id="@+id/shop_timing_activity_close_1_textview_id"
                    style="@style/ShopTimingActivity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/shop_timing_activity_open_1_textview_id"
                    android:layout_marginTop="30dp"
                    android:text="@string/closes_at" />

                <Button
                    android:id="@+id/shop_timing_activity_close_1_btn_id"
                    android:layout_width="110dp"
                    android:layout_height="35dp"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@+id/shop_timing_activity_open_1_btn_id"
                    android:layout_marginEnd="45dp"
                    android:layout_marginTop="19dp"
                    android:background="@drawable/open_time"
                    android:text="@string/close_time" />

                <TextView
                    android:id="@+id/shop_timing_activity_title_3_textview_id"
                    style="@style/ShopTimingActivity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/shop_timing_activity_close_1_textview_id"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="25dp"
                    android:text="@string/add_more" />

                <Switch
                    android:id="@+id/shop_timing_activity_title_3_switch_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@+id/shop_timing_activity_close_1_btn_id"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="55dp"
                    android:layout_marginTop="17dp" />
            </RelativeLayout>

        </FrameLayout>


    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/close_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/business_hours"
        android:layout_margin="10dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/shop_timing_activity_title_4_textview_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:text="@string/closed_from_1_to_2"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/shop_timing_activity_open_2_textview_id"
                    style="@style/ShopTimingActivity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/shop_timing_activity_title_4_textview_id"
                    android:text="@string/opens_at" />

                <Button
                    android:id="@+id/shop_timing_activity_open_2_btn_id"
                    android:layout_width="110dp"
                    android:layout_height="35dp"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@+id/shop_timing_activity_title_4_textview_id"
                    android:layout_marginEnd="45dp"
                    android:layout_marginTop="23dp"
                    android:background="@drawable/open_time"
                    android:text="@string/open_time" />

                <TextView
                    android:id="@+id/shop_timing_activity_close_2_textview_id"
                    style="@style/ShopTimingActivity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/shop_timing_activity_open_2_textview_id"
                    android:layout_marginBottom="13dp"
                    android:layout_marginTop="25dp"
                    android:text="@string/closes_at" />

                <Button
                    android:id="@+id/shop_timing_activity_close_2_btn_id"
                    android:layout_width="110dp"
                    android:layout_height="35dp"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@+id/shop_timing_activity_open_2_btn_id"
                    android:layout_marginEnd="45dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/open_time"
                    android:text="@string/close_time" />
            </RelativeLayout>

        </FrameLayout>

    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/save_timing_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:text="@string/save"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:textStyle="bold"
        android:background="@color/save_green"/>


</RelativeLayout>